--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -42,14 +41,11 @@
             <artifactId>mssql-jdbc</artifactId>
             <scope>runtime</scope>
         </dependency>
-        
         <dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
-		     <version>20240303</version>
-		</dependency>
-		
-        
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20240303</version>
+	</dependency>        
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -65,6 +61,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-crypto</artifactId>
+	</dependency>
     </dependencies>
 
     <build>
