--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
     </properties>
     <dependencies>
 	<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
 		<artifactId>jjwt-api</artifactId>
 		<version>0.12.5</version>
